--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,42 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Archivos de configuración sensibles ###
+application-local.properties
+application-dev.properties
+application-prod.properties
+*.env
+.env
+.env.local
+.env.*.local
+
+### Logs ###
+logs/
+*.log
+log/
+
+### Base de datos ###
+*.db
+*.sqlite
+*.h2.db
+
+### Archivos de sistema ###
+.DS_Store
+Thumbs.db
+*.bak
+*.tmp
+*.swp
+*~
+
+### Archivos de Maven ###
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
