--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,4 +1,7 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true  # ← AGREGAR ESTA LÍNEA
+
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:zentry_store_dev}
     username: ${DB_USERNAME:zentry_user}
