--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update # Flyway handles schema
+      ddl-auto: none # Flyway handles schema
     show-sql: true
 
   flyway:
