backend funcionando al 100%

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=when-authorized
+logging.level.org.springframework.boot.context.config=INFO
+
